deploy/kubernetes-traefik.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iptv-toolkit
  labels:
    app.kubernetes.io/name: iptv-toolkit
    app.kubernetes.io/instance: iptv-toolkit-static
    app.kubernetes.io/managed-by: Manifest
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: iptv-toolkit
spec:
  replicas: 1
  selector:
    matchLabels:
      task: iptv-toolkit
  template:
    metadata:
      labels:
        task: iptv-toolkit
    spec:
      hostNetwork: true
      terminationGracePeriodSeconds: 0
      containers:
        - name: iptv-toolkit
          image: losenmann/iptv-toolkit:latest
          ports:
            - name: main
              containerPort: 4022
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "75m"
              memory: "192Mi"
          volumeMounts:
            - name: time-config
              mountPath: /etc/localtime
              readOnly: true
            - name: tz-config
              mountPath: /etc/timezone
              readOnly: true
      volumes:
        - name: time-config
          hostPath:
            path: /etc/localtime
            type: File
        - name: tz-config
          hostPath:
            path: /etc/timezone
            type: File

---
apiVersion: v1
kind: Service
metadata:
  name: iptv-toolkit-service
  labels:
    app.kubernetes.io/name: iptv-toolkit
    app.kubernetes.io/instance: iptv-toolkit-static
    app.kubernetes.io/managed-by: Manifest
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: iptv-toolkit
spec:
  selector:
    app.kubernetes.io/name: iptv-toolkit
  ports:
    - name: main
      port: 4022

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iptv-toolkit-traefik-route
  labels:
    app.kubernetes.io/name: iptv-toolkit
    app.kubernetes.io/instance: iptv-toolkit-static
    app.kubernetes.io/managed-by: Manifest
    app.kubernetes.io/component: main
    app.kubernetes.io/part-of: iptv-toolkit
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iptv.foo.bar`)
      kind: Rule
      services:
        - name: iptv-toolkit-service
          port: 4022
