deploy/kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iptv-toolkit
  labels:
    app: iptv-toolkit
    name: iptv-toolkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iptv-toolkit
      task: iptv-toolkit
  template:
    metadata:
      labels:
        app: iptv-toolkit
        task: iptv-toolkit
    spec:
      hostNetwork: true
      terminationGracePeriodSeconds: 0
      containers:
        - name: iptv-toolkit
          image: losenmann/iptv-toolkit:latest
          args:
            - -S
            - -U
            - -W
          ports:
            - containerPort: 4022
            - containerPort: 4023
          volumeMounts:
            - name: time-config
              mountPath: /etc/localtime
              readOnly: true
            - name: tz-config
              mountPath: /etc/timezone
              readOnly: true
      volumes:
        - name: time-config
          hostPath:
            path: /etc/localtime
            type: File
        - name: tz-config
          hostPath:
            path: /etc/timezone
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: iptv-toolkit-service
spec:
  ports:
    - name: web
      port: 4022
    - name: udpxy
      port: 4023
  selector:
    app: iptv-toolkit
    task: iptv-toolkit

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iptv-toolkit-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iptv.example.com`) && PathPrefix(`/static`)
      kind: Rule
      services:
        - name: iptv-toolkit-service
          port: 4022
    - match: Host(`iptv.example.com`) && PathPrefix(`/udp`)
      kind: Rule
      services:
        - name: iptv-toolkit-service
          port: 4023
